# AdvancedPrecision

./: README.md  setup.cfg
advanced_precision/: __init__.py  fpe.py  linalg.py  simple_nn.py  torch_support.py
numpy/: __init__.py
tests/: test_fpe.py  test_simple_nn.py  test_torch.py
