[metadata]
name = advanced-precision
version = 0.1.0
description = AdvancedPrecision package
long_description = file: README.md
long_description_content_type = text/markdown
author = AdvancedPrecision Team

[options]
packages = find:
python_requires = >=3.8
zip_safe = False

[options.packages.find]
include = advanced_precision
